--- a/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
@@ -112,7 +112,7 @@
 
 		&:hover,
 		:active {
-			background-color: v.$gray-light-level-1;
+			background-color: v.$mode-account-sidebar-logout-button-hover-background-color-light;
 		}
 	}
 
