--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -13,6 +13,7 @@ $gray-light-level-8: #d6d6d6;
 $gray-light-level-9: #cacaca;
 $gray-light-level-10: #bfbfbf;
 $gray-light-level-11: #b1b1b1;
+$gray-light-level-12: #a9a9a9;
 $gray-level-1: #a3a3a3;
 $gray-level-2: #919191;
 $gray-level-3: #808080;
@@ -50,6 +51,7 @@ $basic-blue-light-level-4: #3889cc;
 $basic-blue-light-level-5: #2d7fc2;
 $basic-blue-light-level-6: #156db4;
 $basic-blue-light-level-7: #1360a0;
+$basic-blue-light-level-8: #125892;
 $basic-blue-level-1: #187cff;
 $basic-blue-level-2: #006eff;
 $basic-blue-level-3: #0062e2;
@@ -142,6 +144,22 @@ $mode-top-bar-search-bar-text-color-light: $mode-home-text-color-light;
 $mode-top-bar-search-bar-text-color-dark: $mode-home-text-color-dark;
 $mode-account-sidebar-modal-background-color-light: $mode-home-background-color-light;
 $mode-account-sidebar-modal-background-color-dark: $mode-home-background-color-dark;
+$mode-account-sidebar-theme-button-border-color-light: $gray-dark-level-1;
+$mode-account-sidebar-theme-button-border-color-dark: $gray-dark-level-10;
+$mode-account-sidebar-theme-button-text-color-light: $gray-dark-level-5;
+$mode-account-sidebar-theme-button-text-color-dark: $gray-dark-level-8;
+$mode-account-sidebar-theme-button-current-container-background-color-light: $gray-light-level-5;
+$mode-account-sidebar-theme-button-current-container-background-color-dark: $gray-light-level-11;
+$mode-account-sidebar-theme-button-option-selected-background-color-light: $basic-blue-light-level-1;
+$mode-account-sidebar-theme-button-option-selected-background-color-dark: $basic-blue-light-level-2;
+$mode-account-sidebar-theme-button-arrow-container-background-color-light: $gray-light-level-10;
+$mode-account-sidebar-theme-button-arrow-container-background-color-dark: $gray-level-2;
+$mode-account-sidebar-theme-button-arrow-container-text-color-light: $gray-dark-level-5;
+$mode-account-sidebar-theme-button-arrow-container-text-color-dark: $gray-dark-level-10;
+$mode-account-sidebar-theme-button-dropdown-container-background-color-light: $mode-account-sidebar-theme-button-current-container-background-color-light;
+$mode-account-sidebar-theme-button-dropdown-container-background-color-dark: $mode-account-sidebar-theme-button-current-container-background-color-dark;
+$mode-account-sidebar-logout-button-hover-background-color-light: $gray-light-level-1;
+$mode-account-sidebar-logout-button-hover-background-color-dark: $gray-dark-level-5;
 $mode-create-item-sidebar-background-color-light: $mode-home-background-color-light;
 $mode-create-item-sidebar-background-color-dark: $mode-home-background-color-dark;
 $mode-create-item-sidebar-form-input-border-color-light: $gray-level-5;
@@ -251,11 +269,6 @@ $filter-button-active-color: $filter-button-active-color-1;
 
 // Components
 $breadcrumb-hamburger-close-button-text-color: $basic-red-level-2;
-$account-sidebar-appearance-theme-button-border-color: $gray-dark-level-1;
-$account-sidebar-appearance-theme-button-background-color: $gray-light-level-5;
-$account-sidebar-appearance-theme-button-arrow-container-color: $gray-light-level-10;
-$account-sidebar-appearance-theme-button-option-text-color: $gray-dark-level-5;
-$account-sidebar-appearance-theme-button-option-selected-color: $basic-blue-light-level-1;
 $account-modal-capital-delete-text-color: $basic-red-level-3;
 $delete-modal-delete-button-background-color: $basic-red-level-1;
 $delete-modal-delete-button-hover-background-color: $basic-red-level-3;
