--- a/client/src/CSS/scss_partials/_app.scss
+++ b/client/src/CSS/scss_partials/_app.scss
@@ -41,6 +41,14 @@ body {
 		color: v.$mode-home-text-color-dark;
 	}
 
+	// Light/Dark mode -- backend-errors -- text colors
+	.js-set-backend-errors-text-color-dark-mode-false {
+		color: v.$mode-backend-errors-text-color-light;
+	}
+	.js-set-backend-errors-text-color-dark-mode-true {
+		color: v.$mode-backend-errors-text-color-dark;
+	}
+
 	// Light/Dark mode -- blurred-background -- background color and opacity
 	.js-set-blurred-background-background-color-and-opacity-dark-mode-false {
 		background-color: v.$mode-blurred-background-background-color-light;
@@ -165,6 +173,46 @@ body {
 		color: v.$mode-universal-text-grayed-out-text-color-dark;
 	}
 
+	// Light/Dark mode -- base form-input -- border, background, text color, and focus box shadow
+	.js-set-base-form-input-border-background-text-color-focus-box-shadow-dark-mode-false {
+		border-color: v.$mode-base-form-input-border-color-light;
+		background-color: v.$mode-base-form-input-background-color-light;
+		color: v.$mode-home-text-color-light;
+
+		&:focus {
+			box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+		}
+	}
+	.js-set-base-form-input-border-background-text-color-focus-box-shadow-dark-mode-true {
+		border-color: v.$mode-base-form-input-border-color-dark;
+		background-color: v.$mode-base-form-input-background-color-dark;
+		color: v.$mode-home-text-color-dark;
+
+		&:focus {
+			box-shadow: v.$mode-base-form-input-focus-box-shadow-color-dark;
+			-moz-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-dark;
+			-webkit-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-dark;
+		}
+	}
+
+	// Light/Dark mode -- base form-submit button -- focus box shadow
+	.js-set-base-form-submit-button-focus-box-shadow-dark-mode-false {
+		&:focus {
+			box-shadow: v.$mode-base-form-submit-button-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-base-form-submit-button-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-base-form-submit-button-focus-box-shadow-color-light;
+		}
+	}
+	.js-set-base-form-submit-button-focus-box-shadow-dark-mode-true {
+		&:focus {
+			box-shadow: v.$mode-base-form-submit-button-focus-box-shadow-color-dark;
+			-moz-box-shadow: v.$mode-base-form-submit-button-focus-box-shadow-color-dark;
+			-webkit-box-shadow: v.$mode-base-form-submit-button-focus-box-shadow-color-dark;
+		}
+	}
+
 	// Light/Dark mode -- TopBar -- border and background colors
 	.js-set-top-bar-border-and-background-color-dark-mode-false {
 		border-color: v.$mode-top-bar-border-color-light;
@@ -273,66 +321,60 @@ body {
 		}
 	}
 
-	// Light/Dark mode -- CreateItemSidebar form-input -- border, background, text color, and focus box shadow
-	.js-set-create-item-sidebar-form-input-border-background-text-color-focus-box-shadow-dark-mode-false {
-		border-color: v.$mode-create-item-sidebar-form-input-border-color-light;
-		background-color: v.$mode-create-item-sidebar-form-input-background-color-light;
-		color: v.$mode-home-text-color-light;
+	// Light/Dark mode -- AccountModalDeleteAccount capital-delete -- text colors
+	.js-set-account-modal-delete-account-capital-delete-text-color-dark-mode-false {
+		color: v.$mode-account-modal-delete-account-capital-delete-text-color-light;
+	}
+	.js-set-account-modal-delete-account-capital-delete-text-color-dark-mode-true {
+		color: v.$mode-account-modal-delete-account-capital-delete-text-color-dark;
+	}
 
-		&:focus {
-			box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
-			-moz-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
-			-webkit-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
+	// Light/Dark mode -- AccountModalDeleteAccount form-submit button -- background (with hover) colors
+	.js-set-account-modal-delete-account-form-submit-button-background-color-dark-mode-false {
+		background-color: v.$mode-account-modal-delete-account-form-delete-button-background-color-light;
+
+		&:hover,
+		:active {
+			background-color: v.$mode-account-modal-delete-account-form-delete-button-hover-background-color-light;
 		}
 	}
-	.js-set-create-item-sidebar-form-input-border-background-text-color-focus-box-shadow-dark-mode-true {
-		border-color: v.$mode-create-item-sidebar-form-input-border-color-dark;
-		background-color: v.$mode-create-item-sidebar-form-input-background-color-dark;
-		color: v.$mode-home-text-color-dark;
+	.js-set-account-modal-delete-account-form-submit-button-background-color-dark-mode-true {
+		background-color: v.$mode-account-modal-delete-account-form-delete-button-background-color-dark;
 
-		&:focus {
-			box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-dark;
-			-moz-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-dark;
-			-webkit-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-dark;
+		&:hover,
+		:active {
+			background-color: v.$mode-account-modal-delete-account-form-delete-button-hover-background-color-dark;
 		}
+	}
+
+	// Light/Dark mode -- CreateItemSidebar component -- background colors
+	.js-set-create-item-sidebar-background-color-dark-mode-false {
+		background-color: v.$mode-create-item-sidebar-background-color-light;
+	}
+	.js-set-create-item-sidebar-background-color-dark-mode-true {
+		background-color: v.$mode-create-item-sidebar-background-color-dark;
 	}
 
 	// Light/Dark mode -- CreateItemSidebar -- disabled form-label
 	.js-set-create-item-sidebar-diabled-label-dark-mode-false {
-		color: v.$mode-create-item-sidebar-form-input-disabled-text-color-light;
+		color: v.$mode-create-item-sidebar-form-disabled-text-color-light;
 		pointer-events: none;
 	}
 	.js-set-create-item-sidebar-diabled-label-dark-mode-true {
-		color: v.$mode-create-item-sidebar-form-input-disabled-text-color-dark;
+		color: v.$mode-create-item-sidebar-form-disabled-text-color-dark;
 		pointer-events: none;
 	}
 
 	// Light/Dark mode -- CreateItemSidebar -- disabled form-input type date
 	.js-set-create-item-sidebar-diabled-input-date-dark-mode-false {
-		background-color: v.$mode-create-item-sidebar-form-input-disabled-background-color-light;
-		color: v.$mode-create-item-sidebar-form-input-disabled-text-color-dark;
+		background-color: v.$mode-create-item-sidebar-form-disabled-background-color-light;
+		color: v.$mode-create-item-sidebar-form-disabled-text-color-dark;
 		pointer-events: none;
 	}
 	.js-set-create-item-sidebar-diabled-input-date-dark-mode-true {
-		background-color: v.$mode-create-item-sidebar-form-input-disabled-background-color-dark;
-		color: v.$mode-create-item-sidebar-form-input-disabled-text-color-dark;
+		background-color: v.$mode-create-item-sidebar-form-disabled-background-color-dark;
+		color: v.$mode-create-item-sidebar-form-disabled-text-color-dark;
 		pointer-events: none;
-	}
-
-	// Light/Dark mode -- CreateItemSidebar form-submit button -- focus box shadow
-	.js-set-create-item-sidebar-submit-button-focus-box-shadow-dark-mode-false {
-		&:focus {
-			box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-light;
-			-moz-box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-light;
-			-webkit-box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-light;
-		}
-	}
-	.js-set-create-item-sidebar-submit-button-focus-box-shadow-dark-mode-true {
-		&:focus {
-			box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-dark;
-			-moz-box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-dark;
-			-webkit-box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-dark;
-		}
 	}
 
 	// Light/Dark mode -- list rows -- border colors
@@ -545,35 +587,35 @@ body {
 
 	// Light/Dark mode -- ItemViewEditItemInfo -- disabled form-label
 	.js-set-item-view-diabled-label-dark-mode-false {
-		color: v.$mode-item-view-form-input-disabled-text-color-light;
+		color: v.$mode-item-view-form-disabled-text-color-light;
 		pointer-events: none;
 	}
 	.js-set-item-view-diabled-label-dark-mode-true {
-		color: v.$mode-item-view-form-input-disabled-text-color-dark;
+		color: v.$mode-item-view-form-disabled-text-color-dark;
 		pointer-events: none;
 	}
 
 	// Light/Dark mode -- ItemViewEditItemInfo -- disabled form-input type date
 	.js-set-item-view-diabled-input-date-dark-mode-false {
-		background-color: v.$mode-item-view-form-input-disabled-background-color-light;
-		color: v.$mode-item-view-form-input-disabled-text-color-dark;
+		background-color: v.$mode-item-view-form-disabled-background-color-light;
+		color: v.$mode-item-view-form-disabled-text-color-dark;
 		pointer-events: none;
 	}
 	.js-set-item-view-diabled-input-date-dark-mode-true {
-		background-color: v.$mode-item-view-form-input-disabled-background-color-dark;
-		color: v.$mode-item-view-form-input-disabled-text-color-dark;
+		background-color: v.$mode-item-view-form-disabled-background-color-dark;
+		color: v.$mode-item-view-form-disabled-text-color-dark;
 		pointer-events: none;
 	}
 
 	// Light/Dark mode -- ItemView form-submit button -- focus box shadow
-	.js-set-item-view-submit-button-focus-box-shadow-dark-mode-false {
+	.js-set-item-view-form-submit-button-focus-box-shadow-dark-mode-false {
 		&:focus {
 			box-shadow: v.$mode-item-view-form-submit-button-focus-box-shadow-color-light;
 			-moz-box-shadow: v.$mode-item-view-form-submit-button-focus-box-shadow-color-light;
 			-webkit-box-shadow: v.$mode-item-view-form-submit-button-focus-box-shadow-color-light;
 		}
 	}
-	.js-set-item-view-submit-button-focus-box-shadow-dark-mode-true {
+	.js-set-item-view-form-submit-button-focus-box-shadow-dark-mode-true {
 		&:focus {
 			box-shadow: v.$mode-item-view-form-submit-button-focus-box-shadow-color-dark;
 			-moz-box-shadow: v.$mode-item-view-form-submit-button-focus-box-shadow-color-dark;
@@ -582,7 +624,7 @@ body {
 	}
 
 	// Light/Dark -- ItemView form cancel button -- mode background color (with hover)
-	.js-set-item-view-cancel-button-button-background-color-mode-false {
+	.js-set-item-view-form-cancel-button-button-background-color-mode-false {
 		background-color: v.$mode-item-view-form-cancel-button-background-color-light;
 
 		&:hover,
@@ -590,7 +632,7 @@ body {
 			background-color: v.$mode-item-view-form-cancel-button-hover-background-color-light;
 		}
 	}
-	.js-set-item-view-cancel-button-button-background-color-mode-true {
+	.js-set-item-view-form-cancel-button-button-background-color-mode-true {
 		background-color: v.$mode-item-view-form-cancel-button-background-color-dark;
 
 		&:hover,
