--- a/client/src/CSS/scss_partials/authentication/_registerLogin.scss
+++ b/client/src/CSS/scss_partials/authentication/_registerLogin.scss
@@ -58,13 +58,17 @@
 	}
 
 	.form__text-input {
+		// Must be border-box because the zoom on the webpage can resize the border otherwise
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+
 		margin-top: v.$register-login-form-input-margin-top;
 		margin-bottom: v.$register-login-form-input-margin-bottom;
 		outline: none;
-		border: v.$form-input-text-base-border-width solid v.$mode-create-item-sidebar-form-input-border-color-light;
+		border: v.$form-input-text-base-border-width solid v.$mode-base-form-input-border-color-light;
 		border-radius: v.$form-input-border-radius;
-		box-sizing: border-box;
-		background: v.$mode-create-item-sidebar-form-input-background-color-light;
+		background: v.$mode-base-form-input-background-color-light;
 		padding: 8px;
 		width: 100%;
 		font-size: 14px;
