--- a/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
@@ -3,6 +3,7 @@
 
 .account-sidebar-component {
 	.sidebar-container {
+		// Must be border-box because the zoom on the webpage can resize the border otherwise
 		-webkit-box-sizing: border-box;
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
