--- a/client/src/CSS/scss_partials/home/menu/_hamburger.scss
+++ b/client/src/CSS/scss_partials/home/menu/_hamburger.scss
@@ -19,9 +19,9 @@
 	.hamburger-button-container,
 	.js-calc-hamburger-button-container {
 		// Must be border-box because the zoom on the webpage can resize the border otherwise
-		-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-		-moz-box-sizing: border-box; /* Firefox, other Gecko */
-		box-sizing: border-box; /* Opera/IE 8+ */
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
 
 		position: absolute;
 		top: 9px;
@@ -44,9 +44,9 @@
 		// Must be more than blurred-background
 		z-index: 5;
 		// Must be border-box because the zoom on the webpage can resize the border otherwise
-		-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-		-moz-box-sizing: border-box; /* Firefox, other Gecko */
-		box-sizing: border-box; /* Opera/IE 8+ */
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
 
 		position: absolute;
 		top: 9px;
