--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
@@ -137,13 +137,14 @@
 
 	.item-box__form-textarea {
 		// Must be border-box because the zoom on the webpage can resize the border otherwise
-		-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-		-moz-box-sizing: border-box; /* Firefox, other Gecko */
-		box-sizing: border-box; /* Opera/IE 8+ */
-		resize: none;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
 
-		outline: none;
+		
+		
 		margin-bottom: 10px;
+		outline: none;
 		border: 1px solid
 			v.$mode-item-view-form-input-border-color-light;
 		border-radius: v.$form-input-border-radius;
@@ -154,6 +155,7 @@
 		line-height: v.$common-line-height;
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: v.$base-font-size;
+		resize: none;
 
 		&:focus {
 			box-shadow: v.$mode-item-view-form-input-focus-box-shadow-color-light;
