--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
@@ -24,6 +24,7 @@
 		border-top: none;
 		border-width: v.$base-sidebar-border-width - 1 v.$base-sidebar-border-width
 			v.$base-sidebar-border-width 0;
+		background-color: v.$mode-create-item-sidebar-background-color-light;
 		height: v.$create-item-sidebar-height;
 		width: v.$create-item-sidebar-width;
 		text-align: center;
@@ -81,36 +82,35 @@
 		margin-bottom: v.$edit-account-create-item-sidebar-form-input-margin-bottom;
 		outline: none;
 		border: v.$form-input-text-base-border-width solid
-			v.$mode-create-item-sidebar-form-input-border-color-light;
+			v.$mode-base-form-input-border-color-light;
 		border-radius: v.$form-input-border-radius;
 		box-sizing: border-box;
-		background: v.$mode-create-item-sidebar-form-input-background-color-light;
+		background: v.$mode-base-form-input-background-color-light;
 		padding: v.$create-item-sidebar-padding;
 		width: 100%;
 		font-size: v.$item-form-text-input-font-size;
 		font-family: Arial, Helvetica, sans-serif;
 
 		&:focus {
-			box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
-			-moz-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
-			-webkit-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
+			box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
 		}
 	}
 
 	.form__textarea {
 		// Must be border-box because the zoom on the webpage can resize the border otherwise
-		-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-		-moz-box-sizing: border-box; /* Firefox, other Gecko */
-		box-sizing: border-box; /* Opera/IE 8+ */
-		resize: none;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
 
 		margin-top: v.$create-item-sidebar-text-input-margin-top;
 		margin-bottom: v.$edit-account-create-item-sidebar-form-input-margin-bottom;
 		outline: none;
 		border: v.$form-input-text-base-border-width solid
-			v.$mode-create-item-sidebar-form-input-border-color-light;
+			v.$mode-base-form-input-border-color-light;
 		border-radius: v.$form-input-border-radius;
-		background: v.$mode-create-item-sidebar-form-input-background-color-light;
+		background: v.$mode-base-form-input-background-color-light;
 		padding: 4px v.$create-item-sidebar-padding 4px
 			v.$create-item-sidebar-padding;
 		height: 150px;
@@ -118,11 +118,12 @@
 		font-size: v.$item-form-text-input-font-size;
 		line-height: v.$common-line-height;
 		font-family: Arial, Helvetica, sans-serif;
+		resize: none;
 
 		&:focus {
-			box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
-			-moz-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
-			-webkit-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
+			box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
 		}
 	}
 
@@ -144,16 +145,16 @@
 		margin-bottom: v.$edit-account-create-item-sidebar-form-input-margin-bottom;
 		outline: none;
 		border: 1px solid gray;
-		background: v.$mode-create-item-sidebar-form-input-background-color-light;
+		background: v.$mode-base-form-input-background-color-light;
 		// Width is 97% since date boxes extend past conatiner
 		width: 97%;
 		// one pixel smaller than associated label
 		font-size: 13px;
 
 		&:focus {
-			box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
-			-moz-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
-			-webkit-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
+			box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
 		}
 	}
 
@@ -162,15 +163,15 @@
 		margin-bottom: v.$edit-account-create-item-sidebar-form-input-margin-bottom;
 		outline: none;
 		border: 1px solid gray;
-		background: v.$mode-create-item-sidebar-form-input-background-color-light;
+		background: v.$mode-base-form-input-background-color-light;
 		width: 100%;
 		// one pixel smaller than associated label
 		font-size: 13px;
 
 		&:focus {
-			box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
-			-moz-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
-			-webkit-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
+			box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
 		}
 	}
 
@@ -193,9 +194,9 @@
 		cursor: pointer;
 
 		&:focus {
-			box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-light;
-			-moz-box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-light;
-			-webkit-box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-light;
+			box-shadow: v.$mode-base-form-submit-button-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-base-form-submit-button-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-base-form-submit-button-focus-box-shadow-color-light;
 		}
 	}
 }
