--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -52,9 +52,10 @@ $basic-blue-light-level-5: #2d7fc2;
 $basic-blue-light-level-6: #156db4;
 $basic-blue-light-level-7: #1360a0;
 $basic-blue-light-level-8: #125892;
-$basic-blue-level-1: #187cff;
+$basic-blue-level-1: #4193ff;
 $basic-blue-level-2: #006eff;
 $basic-blue-level-3: #0062e2;
+$basic-blue-level-4: #0056c7;
 // Navy blues
 $navy-blue-light-level-1: #4d6e92;
 $navy-blue-light-level-2: #4d6b8b;
@@ -73,9 +74,17 @@ $teal-dark-level-1: #50798b;
 $basic-red-level-1: #ff4e4e;
 $basic-red-level-2: #fc1e1e;
 $basic-red-level-3: #ff0000;
-// Raspberry Red
+// Fiery reds
+$fiery-red-level-1: #d31818;
+// Raspberry Reds
 $raspberry-red-level-1: #e95454;
 $raspberry-red-level-2: #d44141;
+// Faded reds
+$faded-red-level-1: #df4f4f;
+$faded-red-level-2: #d64949;
+$faded-red-level-3: #b93737;
+$faded-red-level-4: #b13232;
+$faded-red-level-5: #a52f2f;
 // Yellows
 $yellow-level-1: #ffff00;
 
@@ -84,6 +93,8 @@ $mode-home-background-color-light: white;
 $mode-home-background-color-dark: $gray-dark-level-7;
 $mode-home-text-color-light: black;
 $mode-home-text-color-dark: $tinted-gray-light-level-4;
+$mode-backend-errors-text-color-light: $basic-red-level-3;
+$mode-backend-errors-text-color-dark: $fiery-red-level-1;
 $mode-blurred-background-background-color-light: black;
 $mode-blurred-background-background-color-dark: $mode-blurred-background-background-color-light;
 $mode-blurred-background-opacity-light: 0.8;
@@ -123,10 +134,22 @@ $mode-toggle-switch-off-circle-background-color-light: $mode-toggle-switch-on-ci
 $mode-toggle-switch-off-circle-background-color-dark: $mode-toggle-switch-on-circle-background-color-dark;
 $mode-universal-text-grayed-out-text-color-light: $gray-level-4;
 $mode-universal-text-grayed-out-text-color-dark: $gray-level-6;
-$mode-form-input-focus-box-shadow-color-light: $basic-blue-level-3;
-$mode-form-input-focus-box-shadow-color-dark: $basic-blue-light-level-5;
-$mode-form-submit-focus-box-shadow-color-light: black;
-$mode-form-submit-focus-box-shadow-color-dark: $gray-light-level-8;
+$mode-form-input-focus-box-shadow-color-light: $basic-blue-level-1; // Used by base and ItemView forms
+$mode-form-input-focus-box-shadow-color-dark: $basic-blue-light-level-5; // Used by base and ItemView forms
+$mode-form-submit-focus-box-shadow-color-light: black; // Used by base and ItemView submit buttons
+$mode-form-submit-focus-box-shadow-color-dark: $gray-light-level-8; // Used by base and ItemView submit buttons
+$mode-base-form-input-border-color-light: $gray-level-5;
+$mode-base-form-input-border-color-dark: black;
+$mode-base-form-input-background-color-light: $gray-light-level-5;
+$mode-base-form-input-background-color-dark: $gray-dark-level-1;
+$mode-base-form-input-focus-box-shadow-color-light: 0 0 0 1px
+	$mode-form-input-focus-box-shadow-color-light;
+$mode-base-form-input-focus-box-shadow-color-dark: 0 0 0 1px
+	$mode-form-input-focus-box-shadow-color-dark;
+$mode-base-form-submit-button-focus-box-shadow-color-light: 0 0 0
+	1px $mode-form-submit-focus-box-shadow-color-light;
+$mode-base-form-submit-button-focus-box-shadow-color-dark: 0 0 0
+	1px $mode-form-submit-focus-box-shadow-color-dark;
 // Light/Dark mode (specific)
 $mode-top-bar-border-color-light: black;
 $mode-top-bar-border-color-dark: black;
@@ -160,24 +183,18 @@ $mode-account-sidebar-theme-button-dropdown-container-background-color-light: $m
 $mode-account-sidebar-theme-button-dropdown-container-background-color-dark: $mode-account-sidebar-theme-button-current-container-background-color-dark;
 $mode-account-sidebar-logout-button-hover-background-color-light: $gray-light-level-1;
 $mode-account-sidebar-logout-button-hover-background-color-dark: $gray-dark-level-5;
+$mode-account-modal-delete-account-capital-delete-text-color-light: $mode-backend-errors-text-color-light;
+$mode-account-modal-delete-account-capital-delete-text-color-dark: $mode-backend-errors-text-color-dark;
+$mode-account-modal-delete-account-form-delete-button-background-color-light: $faded-red-level-1;
+$mode-account-modal-delete-account-form-delete-button-background-color-dark: $faded-red-level-4;
+$mode-account-modal-delete-account-form-delete-button-hover-background-color-light: $faded-red-level-2;
+$mode-account-modal-delete-account-form-delete-button-hover-background-color-dark: $faded-red-level-5;
 $mode-create-item-sidebar-background-color-light: $mode-home-background-color-light;
 $mode-create-item-sidebar-background-color-dark: $mode-home-background-color-dark;
-$mode-create-item-sidebar-form-input-border-color-light: $gray-level-5;
-$mode-create-item-sidebar-form-input-border-color-dark: black;
-$mode-create-item-sidebar-form-input-background-color-light: $gray-light-level-5;
-$mode-create-item-sidebar-form-input-background-color-dark: $gray-dark-level-1;
-$mode-create-item-sidebar-form-input-focus-box-shadow-color-light: 0 0 0 1px
-	$mode-form-input-focus-box-shadow-color-light;
-$mode-create-item-sidebar-form-input-focus-box-shadow-color-dark: 0 0 0 1px
-	$mode-form-input-focus-box-shadow-color-dark;
-$mode-create-item-sidebar-form-input-disabled-background-color-light: $mode-create-item-sidebar-background-color-light;
-$mode-create-item-sidebar-form-input-disabled-background-color-dark: $mode-create-item-sidebar-background-color-dark;
-$mode-create-item-sidebar-form-input-disabled-text-color-light: $gray-light-level-10;
-$mode-create-item-sidebar-form-input-disabled-text-color-dark: $gray-level-6;
-$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-light: 0 0 0
-	1px $mode-form-submit-focus-box-shadow-color-light;
-$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-dark: 0 0 0
-	1px $mode-form-submit-focus-box-shadow-color-dark;
+$mode-create-item-sidebar-form-disabled-background-color-light: $mode-create-item-sidebar-background-color-light;
+$mode-create-item-sidebar-form-disabled-background-color-dark: $mode-create-item-sidebar-background-color-dark;
+$mode-create-item-sidebar-form-disabled-text-color-light: $gray-light-level-10;
+$mode-create-item-sidebar-form-disabled-text-color-dark: $gray-level-6;
 $mode-list-row-border-color-light: $gray-level-2;
 $mode-list-row-border-color-dark: $gray-level-6;
 $mode-list-row-hover-background-color-light: $gray-light-level-2;
@@ -214,8 +231,8 @@ $mode-item-view-form-input-border-color-light: black;
 $mode-item-view-form-input-border-color-dark: black;
 $mode-item-view-form-input-background-color-light: $mode-home-background-color-light;
 $mode-item-view-form-input-background-color-dark: $mode-home-background-color-dark;
-$mode-item-view-form-input-focus-box-shadow-color-light: $mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
-$mode-item-view-form-input-focus-box-shadow-color-dark: $mode-create-item-sidebar-form-input-focus-box-shadow-color-dark;
+$mode-item-view-form-input-focus-box-shadow-color-light: $mode-base-form-input-focus-box-shadow-color-light;
+$mode-item-view-form-input-focus-box-shadow-color-dark: $mode-base-form-input-focus-box-shadow-color-dark;
 $mode-item-view-form-input-top-bottom-left-focus-box-shadow-color-light: 0 -1px 0
 		0 $mode-form-input-focus-box-shadow-color-light,
 	-1px 0 0 0 $mode-form-input-focus-box-shadow-color-light,
@@ -232,12 +249,12 @@ $mode-item-view-form-name-char-count-container-top-bottom-right-box-shadow-color
 		0 0 $mode-form-input-focus-box-shadow-color-dark,
 	1px 0 0 0 $mode-form-input-focus-box-shadow-color-dark,
 	0 1px 0 0 $mode-form-input-focus-box-shadow-color-dark;
-$mode-item-view-form-input-disabled-background-color-light: $mode-top-bar-background-color-light;
-$mode-item-view-form-input-disabled-background-color-dark: $mode-top-bar-background-color-dark;
-$mode-item-view-form-input-disabled-text-color-light: $mode-create-item-sidebar-form-input-disabled-text-color-light;
-$mode-item-view-form-input-disabled-text-color-dark: $mode-create-item-sidebar-form-input-disabled-text-color-dark;
-$mode-item-view-form-submit-button-focus-box-shadow-color-light: $mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-light;
-$mode-item-view-form-submit-button-focus-box-shadow-color-dark: $mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-dark;
+$mode-item-view-form-disabled-background-color-light: $mode-top-bar-background-color-light;
+$mode-item-view-form-disabled-background-color-dark: $mode-top-bar-background-color-dark;
+$mode-item-view-form-disabled-text-color-light: $mode-create-item-sidebar-form-disabled-text-color-light;
+$mode-item-view-form-disabled-text-color-dark: $mode-create-item-sidebar-form-disabled-text-color-dark;
+$mode-item-view-form-submit-button-focus-box-shadow-color-light: $mode-base-form-submit-button-focus-box-shadow-color-light;
+$mode-item-view-form-submit-button-focus-box-shadow-color-dark: $mode-base-form-submit-button-focus-box-shadow-color-dark;
 $mode-item-view-form-cancel-button-background-color-light: $gray-light-level-3;
 $mode-item-view-form-cancel-button-background-color-dark: $gray-dark-level-4;
 $mode-item-view-form-cancel-button-hover-background-color-light: $gray-light-level-4;
@@ -269,12 +286,9 @@ $filter-button-active-color: $filter-button-active-color-1;
 
 // Components
 $breadcrumb-hamburger-close-button-text-color: $basic-red-level-2;
-$account-modal-capital-delete-text-color: $basic-red-level-3;
 $delete-modal-delete-button-background-color: $basic-red-level-1;
 $delete-modal-delete-button-hover-background-color: $basic-red-level-3;
 
-// Backend error color
-$backend-error-color: red;
 // Focus colors
 $focus-blue: #0059ff;
 // Icon button colors
